Added config for yabai window manager for MacOS

--- a/macos/config/tmux/tmux.conf
+++ b/macos/config/tmux/tmux.conf
@@ -1,27 +1,23 @@
-# Enable mouse support
+# enable mouse support
 set -g mouse on
 
-# Change default delay
+# change default delay
 set -s escape-time 5
 
-# Set windows and panes index
+# set windows and panes index
 set -g base-index 1
 
-# Set bind key to reload configuration file
-bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!" 
+# set bind key to reload configuration file
+bind r source-file ~/.config/tmux/tmux.conf \; display "Reoloaded!"
 
-# History limit
-set -g history-limit 50000000
+# history limit
+set -g history-limit 500000
 
-# Enabling focus-events for 'autoread' to work (Nvim)
-set -g focus-events on
-
-# Disable automatic windows renaming
+# disable automatic windows renaming
 set -g allow-rename on
 set -wg automatic-rename on
 
-
-# message infos
+# message info
 set -g message-style "fg=#ebdbb2, bg=#928374"
 
 # writing commands inactive
@@ -33,8 +29,15 @@ set -g status-interval 2
 set -g status-right ''
 set -g status-left ''
 
-# default statusbar color
-set -g status-style "fg=#ebdbb2, bg=#504945"
+# default statusbar style
+#set-option -g status-style "fg=#ebdbb2, bg=#504945"
+set-option -g status-style bg=default
 
 setw -g window-status-format "#[reverse, fg=#282828, bg=#ebdbb2]▓▒░ #W ░▒▓"
 setw -g window-status-current-format "#[reverse, fg=#282828, bg=#98971a]▓▒░ #W ░▒▓"
+
+# enable copy paste
+bind P paste-buffer
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
