--- a/macos/config/alacritty/alacritty.yml
+++ b/macos/config/alacritty/alacritty.yml
@@ -1,9 +1,18 @@
 import:
-  - ~/.config/alacritty/fonts.yml
   - ~/.config/alacritty/colors.yml
+  - ~/.config/alacritty/fonts.yml
 
 env:
   TERM: xterm-256color
+
+shell:
+  program: /opt/homebrew/bin/tmux
+  args:
+    - new-session
+    - -D
+    - -A
+    - -s
+    - main
 
 window:
   opacity: 0.9
@@ -16,11 +25,11 @@ window:
     y: 40
 
   decorations: buttonless
-  startup_mode: Windowed
+  startup_mode: windowed
   dynamic_title: false
 
   scrolling:
-    history: 10000
+    history: 100000
     multiplier: 3
 
 cursor:
@@ -28,10 +37,29 @@ cursor:
     shape: Block
     blinking: On
 
-  unfocused_hollow: false
+    unfocused_hollow: false
 
-key bindings:
-  - { key: Key3,     mods: Alt,     chars: "\x23" }
+# TMUX SHORTCUTS      
+key_bindings:
+  # NEW TAB
+  - { key: T, mods: Command, chars: "\x02\x63" }
+  # RENAME PANE
+  - { key: Comma, mods: Command, chars: "\x02\x2c" }
+  # WINDOW VIEWER
+  - { key: W, mods: Command, chars: "\x02\x77" }
+  # SPLIT RIGHT
+  - { key: L, mods: Command, chars: "\x02\x25" }
+  # SPLIT DOWN
+  - { key: J, mods: Command, chars: "\x02\x22" }
+  # SWITCH TO PANE 1 - 9
+  - { key: Key1, mods: Command, chars: "\x02\x31" }  
+  - { key: Key2, mods: Command, chars: "\x02\x32" }  
+  - { key: Key3, mods: Command, chars: "\x02\x33" }  
+  - { key: Key4, mods: Command, chars: "\x02\x34" }
+  - { key: Key5, mods: Command, chars: "\x02\x35" }  
+  - { key: Key6, mods: Command, chars: "\x02\x36" }
+  - { key: Key7, mods: Command, chars: "\x02\x37" }  
+  - { key: Key8, mods: Command, chars: "\x02\x38" }  
+  - { key: Key9, mods: Command, chars: "\x02\x39" }  
 
-live_config_reload: true
-
+live_reload_config: true
