--- a/macos/config/tmux/tmux.conf
+++ b/macos/config/tmux/tmux.conf
@@ -1,43 +1,39 @@
-# enable mouse support
-set -g mouse on
+set -g mouse on                                 # enable mouse support
+set -s escape-time 0                            # zero-out escapt time delay
+set -g base-index 1                             # start indexing windows at 1 instead of 0
+set -g set-clipboard on                         # use system clipboard
+set -g history-limit 1000000                    # history limit
+set -g detach-on-destroy off                    # don't exit from tmux when closing a session
+set -g status "on"                              # enable status
+set -g status-style 'bg=default'                # transparent
+set -g status-position bottom                   # position of status bottom
+set -g status-justify centre                    # center status
+set -g status-interval 2                        # update status time every 2 seconds
+set -g status-right ''                          # empty
+set -g status-left ''                           # empty
 
-# change default delay
-set -s escape-time 5
+set -g message-style "fg=#ebdbb2, bg=#928374"
+set -g message-command-style "fg=#ebdbb2, bg=#928374"
 
-# set windows and panes index
-set -g base-index 1
-
-# set bind key to reload configuration file
-bind r source-file ~/.config/tmux/tmux.conf \; display "Reoloaded!"
-
-# history limit
-set -g history-limit 500000
-
-# disable automatic windows renaming
 set -g allow-rename on
 set -wg automatic-rename on
 
-# message info
-set -g message-style "fg=#ebdbb2, bg=#928374"
+set -wg window-status-format "#[reverse, fg=#1e1e2e, bg=#cdd6f4]▓▒░ #W ░▒▓"
+set -wg window-status-current-format "#[reverse, fg=#cdd6f4, bg=#1e1e2e]▓▒░ #W ░▒▓"
 
-# writing commands inactive
-set -g message-command-style "fg=#ebdbb2, bg=#928374"
-
-set -g status "on"
-set -g status-justify centre
-set -g status-interval 2
-set -g status-right ''
-set -g status-left ''
-
-# default statusbar style
-#set-option -g status-style "fg=#ebdbb2, bg=#504945"
-set-option -g status-style bg=default
-
-setw -g window-status-format "#[reverse, fg=#282828, bg=#ebdbb2]▓▒░ #W ░▒▓"
-setw -g window-status-current-format "#[reverse, fg=#282828, bg=#98971a]▓▒░ #W ░▒▓"
-
-# enable copy paste
 bind P paste-buffer
+set-option -g status-keys vi 
+set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
+
+# vim-line pane switching
+bind -r h select-pane -L
+bind -r j select-pane -D
+bind -r k select-pane -U
+bind -r l select-pane -R
+
+bind r source-file ~/.config/tmux/tmux.conf \; display "Reoloaded!"  # set bind key to reload configuration file
+
+
