--- a/macos/config/alacritty/alacritty.yml
+++ b/macos/config/alacritty/alacritty.yml
@@ -15,7 +15,7 @@ shell:
     - main
 
 window:
-  opacity: 0.9
+  opacity: 0.7
   dimensions:
     columns: 200
     lines: 50
@@ -23,6 +23,7 @@ window:
   padding:
     x: 40
     y: 40
+
 
   decorations: buttonless
   startup_mode: windowed
@@ -32,11 +33,13 @@ window:
     history: 100000
     multiplier: 3
 
+selection:
+  save_to_clipboard: true
+
 cursor:
   style:
     shape: Block
-    blinking: On
-
+    vi_mode_style:
     unfocused_hollow: false
 
 # TMUX SHORTCUTS      
