--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -4,8 +4,8 @@ right_format = """$all"""
 continuation_prompt = '▶▶ '
 
 [character]
-success_symbol = '[  >>](bold green) '
-error_symbol = '[  >>](bold red) '
+success_symbol = '[󰱯  >>](bold green) '
+error_symbol = '[󰱯  >>](bold red) '
 vimcmd_symbol = '[ >>](bold blue) '
 vimcmd_visual_symbol = '[ >>](bold magenta) '
 
