--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -11,6 +11,7 @@ set -g renumber-windows on
 set-option -g focus-events on
 set-option -g default-terminal 'screen-256color'
 set-option -g terminal-overrides ',xterm-256color:RGB'
+set-option -g allow-passthrough on
 
 set -g status "on"
 set -g status-interval 2
