--- a/windows/dsc/winman.conf.dsc.yaml
+++ b/windows/dsc/winman.conf.dsc.yaml
@@ -6,7 +6,7 @@ properties:
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       directives:
         description: Install glazewm
-        allowPrerelease: true
+        allowPrerelease: false
       settings:
         id: glzr-io.glazewm
         source: winget
