--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -4,9 +4,9 @@ right_format = """$directory"""
 continuation_prompt = '▶▶ '
 
 [character]
-success_symbol = '[󰱯  >>](bold green)'
+success_symbol = '[ >>](bold green)'
 # success_symbol = '[~ λ](bold green)'
-error_symbol = '[󰱯  >>](bold red)'
+error_symbol = '[ >>](bold red)'
 # error_symbol = '[~ λ](bold red)'
 vimcmd_symbol = '[ >>](bold blue)'
 vimcmd_visual_symbol = '[ >>](bold magenta)'
