minor update to dsc

--- a/windows/dsc/cli.conf.dsc.yaml
+++ b/windows/dsc/cli.conf.dsc.yaml
@@ -102,6 +102,13 @@ properties:
         id: RedHat.Podman
         source: winget
     - resource: Microsoft.WinGet.DSC/WinGetPackage
+      directives: :
+        description: Install PowerShell 7
+        allowPrerelease: true
+      settings:
+        id: Microsoft.PowerShell
+        source: winget
+    - resource: Microsoft.WinGet.DSC/WinGetPackage
       directives:
         description: Install ripgrep
         allowPrerelease: true
